UI: navbar , main sect

--- a/index.html
+++ b/index.html
@@ -1,23 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template Three</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Template Three</title>
 
-  <link rel="stylesheet" href="css/main.css">
-  <!-- normalize lib -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <!-- font awesome lib -->
-  <link rel="stylesheet" href="css/all.min.css">
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- normalize lib -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- font awesome lib -->
+    <link rel="stylesheet" href="css/all.min.css" />
+    <!-- project css -->
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/framework.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <script src="js/main.js" defer></script>
-</head>
-<body>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste accusamus hic mollitia!
-</body>
+    <script src="js/main.js" defer></script>
+  </head>
+  <body>
+    <!-- Start Header -->
+    <header>
+      <!-- Start Navbar -->
+      <nav class="cap-text">
+        <div class="container">
+          <div class="title">elzero</div>
+          <ul class="links">
+            <li>
+              <a href="#articles">articles</a>
+            </li>
+            <li>
+              <a href="#gallery">gallery</a>
+            </li>
+            <li>
+              <a href="#features">features</a>
+            </li>
+            <li class="mega-menu-li">
+              <a href="" class="mega-menu-btn">other links</a>
+            </li>
+            <div class="mega-menu container">
+              <img src="images/megamenu.png" alt="" />
+              <div class="column">
+                <a href="#testimonials">
+                  <i class="fas fa-comments"></i>
+                  <span>testimonials</span>
+                </a>
+                <a href="#team-members">
+                  <i class="fas fa-user"></i>
+                  <span>team members</span>
+                </a>
+                <a href="#services">
+                  <i class="fas fa-building"></i>
+                  <span>services</span>
+                </a>
+                <a href="#our-skills">
+                  <i class="fas fa-check-circle"></i>
+                  <span>our skills</span>
+                </a>
+                <a href="#how-it-works">
+                  <i class="fas fa-clipboard"></i>
+                  <span>how-it-works</span>
+                </a>
+              </div>
+              <div class="column">
+                <a href="#events">
+                  <i class="fas fa-calendar"></i>
+                  <span>events</span>
+                </a>
+                <a href="#pricing-plans">
+                  <i class="fas fa-server"></i>
+                  <span>pricing plans</span>
+                </a>
+                <a href="#top-videos">
+                  <i class="fas fa-play-circle"></i>
+                  <span>top videos</span>
+                </a>
+                <a href="#stats">
+                  <i class="fas fa-chart-bar"></i>
+                  <span>stats</span>
+                </a>
+                <a href="#request-a-discount">
+                  <i class="fas fa-percent"></i>
+                  <span>request a discount</span>
+                </a>
+              </div>
+            </div>
+          </ul>
+        </div>
+      </nav>
+      <!-- End Navbar -->
+
+      <!-- Start main -->
+      <main class="container">
+        <div class="text cap-text">
+          <h1>welcome, to elzero world</h1>
+          <p>
+            Here Iam gonna share everything about my life. Books Iam reading,
+            Games Iam Playing, Stories and Events
+          </p>
+        </div>
+        <img src="images/landing-image.png" alt="" />
+      </main>
+      <!-- End main -->
+      
+      <div class="pointer">
+        <i class="fas fa-angle-double-down"></i>
+      </div>
+    </header>
+    <!-- End Header -->
+  </body>
 </html>
