UI: articles sect

--- a/index.html
+++ b/index.html
@@ -112,5 +112,116 @@
       </div>
     </header>
     <!-- End Header -->
+
+    <!-- Start Articles Sect -->
+    <section class="sect articles" id="articles">
+      <h2 class="sect-heading">articles</h2>
+      <div class="container">
+        <div class="card">
+          <img src="images/cat-01.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-02.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-03.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-04.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-05.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-06.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-07.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="card">
+          <img src="images/cat-08.jpg" alt="">
+          <div class="text-box">
+            <h3 class="cap-text">test title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+          </div>
+          <button>
+            read more
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        
+      </div>
+    </section>
+    <!-- End Articles Sect -->
+
+    <!-- Start Gallery Sect -->
+    <section class="sect gallery" id="gallery">
+      <h2 class="sect-heading">gallery</h2>
+      <div class="container">
+        <div class="box"><img src="images/gallery-01.png" alt=""></div>
+        <div class="box"><img src="images/gallery-02.png" alt=""></div>
+        <div class="box"><img src="images/gallery-03.png" alt=""></div>
+        <div class="box"><img src="images/gallery-04.png" alt=""></div>
+        <div class="box"><img src="images/gallery-05.png" alt=""></div>
+        <div class="box"><img src="images/gallery-06.png" alt=""></div>
+      </div>
+    </section>
+    <!-- End Gallery Sect -->
   </body>
 </html>
