--- a/index.html
+++ b/index.html
@@ -209,19 +209,48 @@
       </div>
     </section>
     <!-- End Articles Sect -->
+    
+    <div class="spikes"></div>
 
     <!-- Start Gallery Sect -->
     <section class="sect gallery" id="gallery">
       <h2 class="sect-heading">gallery</h2>
       <div class="container">
-        <div class="box"><img src="images/gallery-01.png" alt=""></div>
-        <div class="box"><img src="images/gallery-02.png" alt=""></div>
-        <div class="box"><img src="images/gallery-03.png" alt=""></div>
-        <div class="box"><img src="images/gallery-04.png" alt=""></div>
-        <div class="box"><img src="images/gallery-05.png" alt=""></div>
-        <div class="box"><img src="images/gallery-06.png" alt=""></div>
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-01.png" alt="">
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-02.png" alt="">
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-03.jpg" alt="">
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-04.png" alt="">
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-05.jpg" alt="">
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-cont">
+            <img src="images/gallery-06.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
     <!-- End Gallery Sect -->
+
+    
   </body>
 </html>
