--- a/index.html
+++ b/index.html
@@ -251,6 +251,42 @@
     </section>
     <!-- End Gallery Sect -->
 
-    
+    <!-- Start Features -->
+    <section class="sect features" id="features">
+      <h2 class="sect-heading">features</h2>
+      <div class="container">
+        <div class="box">
+          <div class="bg-img">
+            <img src="images/features-01.jpg" alt="" class="bg-img">
+          </div>
+          <div class="content">
+            <h3>Quality</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            <button>more</button>
+          </div>
+        </div>
+        <div class="box">
+          <div class="bg-img">
+            <img src="images/features-02.jpg" alt="" class="bg-img">
+          </div>
+          <div class="content">
+            <h3>Time</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            <button>more</button>
+          </div>
+        </div>
+        <div class="box">
+          <div class="bg-img">
+            <img src="images/features-03.jpg" alt="" class="bg-img">
+          </div>
+          <div class="content">
+            <h3>Passion</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            <button>more</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Features -->
   </body>
 </html>
