--- a/index.html
+++ b/index.html
@@ -288,5 +288,135 @@
       </div>
     </section>
     <!-- End Features -->
+
+    <!-- Start Testimonials -->
+    <section class="sect testimonials" id="testimonials">
+      <h2 class="sect-heading">testimonials</h2>
+      <div class="container">
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-01.png" alt="">
+          </div>
+          <h3>Mohamed Farag</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="far fa-star"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-02.png" alt="">
+          </div>
+          <h3>Mohamed Ibrahim</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="far fa-star"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-03.png" alt="">
+          </div>
+          <h3>Shady Nabil</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="far fa-star"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-04.png" alt="">
+          </div>
+          <h3>Amr Hendawy</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-05.png" alt="">
+          </div>
+          <h3>Sherief Ashraf</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+        <div class="box">
+          <div class="avatar">
+            <img src="images/avatar-06.png" alt="">
+          </div>
+          <h3>Osama Mohamed</h3>
+          <span>Full Stack Developer</span>
+          <div class="rating">
+            <i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="fas fa-star filled"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+          </div>
+          <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+        </div>
+      </div>
+    </section>
+    <!-- Start Testimonials -->
+
+    <!-- Start Team members -->
+    <section class="sect team-members" id="team-members">
+      <h2 class="sect-heading">team members</h2>
+      <div class="container">
+        <div class="box">
+          <div class="img-box"><img src="images/team-01.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box"><img src="images/team-02.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box"><img src="images/team-03.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box"><img src="images/team-04.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box"><img src="images/team-05.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box"><img src="images/team-06.jpg" alt=""></div>
+          <div class="socials"><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a><a href=""><i class=""></i></a></div>
+          <div class="text-box">
+            <h3>name</h3>
+            <p>simple short discreption</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Team members -->
   </body>
 </html>
