--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
         </div>
       </div>
     </section>
-    <!-- End Features -->
+    <!-- End Features Sect -->
 
-    <!-- Start Testimonials -->
+    <!-- Start Testimonials Sect -->
     <section class="sect testimonials" id="testimonials">
       <h2 class="sect-heading">testimonials</h2>
       <div class="container">
@@ -423,9 +423,9 @@
         </div>
       </div>
     </section>
-    <!-- Start Testimonials -->
+    <!-- Start Testimonials Sect -->
 
-    <!-- Start Team members -->
+    <!-- Start Team members Sect -->
     <section class="sect team-members" id="team-members">
       <h2 class="sect-heading">team members</h2>
       <div class="container">
@@ -567,6 +567,76 @@
         </div>
       </div>
     </section>
-    <!-- End Team members -->
+    <!-- End Team members Sect -->
+
+    <div class="spikes"></div>
+
+    <!-- Start Services Sect -->
+    <section class="sect services" id="services">
+      <h2 class="sect-heading">services</h2>
+      <div class="container">
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-user-shield"></i>
+            <h3>security</h3>
+          </div>
+          <div class="details">
+            <p class="number">01</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-wrench"></i>
+            <h3>fixing issues</h3>
+          </div>
+          <div class="details">
+            <p class="number">02</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-map"></i>
+            <h3>location</h3>
+          </div>
+          <div class="details">
+            <p class="number">03</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-laptop-code"></i>
+            <h3>coding</h3>
+          </div>
+          <div class="details">
+            <p class="number">04</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-palette"></i>
+            <h3>design</h3>
+          </div>
+          <div class="details">
+            <p class="number">05</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="service-title">
+            <i class="fas fa-bullhorn"></i>
+            <h3>marketing</h3>
+          </div>
+          <div class="details">
+            <p class="number">06</p>
+            <a href="#">details</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Services Sect -->
   </body>
 </html>
