UI: our skills sect

--- a/index.html
+++ b/index.html
@@ -638,5 +638,46 @@
       </div>
     </section>
     <!-- End Services Sect -->
+
+    <!-- Start Our Skills Sect -->
+    <section class="sect our-skills" id="our-skills">
+      <h2 class="sect-heading">our skills</h2>
+      <div class="container">
+        <div class="img-box">
+          <img src="images/skills.png" alt="">
+        </div>
+        <div class="skills-box">
+          <div class="skill">
+            <p>HTML</p>
+            <span>80%</span>
+            <div class="progress-bar">
+              <div data-progress="80%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>CSS</p>
+            <span>85%</span>
+            <div class="progress-bar">
+              <div data-progress="85%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>JavaScript</p>
+            <span>70%</span>
+            <div class="progress-bar">
+              <div data-progress="70%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Python</p>
+            <span>80%</span>
+            <div class="progress-bar">
+              <div data-progress="80%"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Our Skills Sect -->
   </body>
 </html>
