--- a/index.html
+++ b/index.html
@@ -435,9 +435,13 @@
               <img src="images/team-01.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -452,9 +456,13 @@
               <img src="images/team-02.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -469,9 +477,13 @@
               <img src="images/team-03.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -486,9 +498,13 @@
               <img src="images/team-04.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -503,9 +519,13 @@
               <img src="images/team-05.png" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -520,9 +540,13 @@
               <img src="images/team-06.png" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -537,9 +561,13 @@
               <img src="images/team-07.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -554,9 +582,13 @@
               <img src="images/team-08.jpg" alt="" />
             </div>
             <div class="socials">
-              <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
               <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-              <a href="https://linkedin.con"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://linkedin.con"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
               <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
@@ -644,7 +676,7 @@
       <h2 class="sect-heading">our skills</h2>
       <div class="container">
         <div class="img-box">
-          <img src="images/skills.png" alt="">
+          <img src="images/skills.png" alt="" />
         </div>
         <div class="skills-box">
           <div class="skill">
@@ -679,5 +711,54 @@
       </div>
     </section>
     <!-- End Our Skills Sect -->
+
+    <!-- Start How It Works Sect -->
+    <section class="sect how-it-works" id="how-it-works">
+      <h2 class="sect-heading">how it works ?</h2>
+      <div class="container">
+        <div class="img-cont">
+          <img src="images/work-steps.png" alt="" />
+        </div>
+        <div class="cards-box">
+          <div class="card">
+            <div class="img-box">
+              <img src="images/work-steps-1.png" alt="" />
+            </div>
+            <div class="text">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-box">
+              <img src="images/work-steps-2.png" alt="" />
+            </div>
+            <div class="text">
+              <h3>Architecture</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-box">
+              <img src="images/work-steps-3.png" alt="" />
+            </div>
+            <div class="text">
+              <h3>Developement</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End How It Works Sect -->
   </body>
 </html>
