UI: events section

--- a/index.html
+++ b/index.html
@@ -760,5 +760,113 @@
       </div>
     </section>
     <!-- End How It Works Sect -->
+
+    <!-- start events -->
+    <section class="sect events" id="events">
+      <div class="dots one">
+        <span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="dots two">
+        <span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span>
+      </div>
+      <h2 class="sect-heading">latest events</h2>
+      <div class="container">
+        <div class="row">
+          <div class="img-box">
+            <img src="images/events.png" alt="" />
+          </div>
+          <div class="info-box">
+            <div class="count-down">
+              <div class="box">
+                <p>00</p>
+                <span>days</span>
+              </div>
+              <div class="box">
+                <p>00</p>
+                <span>hours</span>
+              </div>
+              <div class="box">
+                <p>00</p>
+                <span>minutes</span>
+              </div>
+              <div class="box">
+                <p>00</p>
+                <span>seconds</span>
+              </div>
+            </div>
+            <div class="text">
+              <h3>tech masters event 2021</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
+                tenetur doloremque iusto ut adipisci quam ratione aliquam
+                excepturi nulla in harum, veritatis porro
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="sign-up">
+          <input type="email" placeholder="enter your email" />
+          <button type="submit">subscribe</button>
+        </div>
+      </div>
+    </section>
+    <!-- end events -->
   </body>
 </html>
