UI: pricing plans section

--- a/index.html
+++ b/index.html
@@ -868,5 +868,170 @@
       </div>
     </section>
     <!-- end events -->
+
+    <!-- start pricing plans -->
+    <section class="sect pricing-plans" id="pricing-plans">
+      <div class="dots one">
+        <span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="dots two">
+        <span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span><span></span
+        ><span></span><span></span><span></span><span></span>
+      </div>
+      
+      <h2 class="sect-heading">pricing plans</h2>
+      <div class="container">
+        <div class="plan">
+          <div class="info">
+            <p class="title">basic</p>
+            <img src="images/hosting-basic.png" alt="">
+            <p class="price">$15</p>
+            <span>per month</span>
+          </div>
+          <div class="features">
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>10GB HDD Space</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>5 Email Addresses</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>2 Subdomains</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>4 Databases</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>Basic Support</p>
+            </div>
+          </div>
+          <button>choose plan</button>
+        </div>
+        <div class="plan advanced">
+          <div class="badge">most popular</div>
+          <div class="info">
+            <p class="title">Advanced</p>
+            <img src="images/hosting-advanced.png" alt="">
+            <p class="price">$25</p>
+            <span>per month</span>
+          </div>
+          <div class="features">
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>20GB HDD Space</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>10 Email Addresses</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>5 Subdomains</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>8 Databases</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>Advanced Support</p>
+            </div>
+          </div>
+          <button>choose plan</button>
+        </div>
+        <div class="plan">
+          <div class="info">
+            <p class="title">Professional</p>
+            <img src="images/hosting-Professional.png" alt="">
+            <p class="price">$45</p>
+            <span>per month</span>
+          </div>
+          <div class="features">
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>50GB HDD Space</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>20 Email Addresses</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>10 Subdomains</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>20 Databases</p>
+            </div>
+            <div class="feat">
+              <i class="fas fa-check"></i>
+              <p>Professional Support</p>
+            </div>
+          </div>
+          <button>choose plan</button>
+        </div>
+      </div>
+    </section>
+    <!-- end pricing plans -->
   </body>
 </html>
