--- a/index.html
+++ b/index.html
@@ -1033,5 +1033,55 @@
       </div>
     </section>
     <!-- end pricing plans -->
+    
+    <!-- start top videos -->
+    <section class="sect top-videos" id="top-videos">
+      <h2 class="sect-heading">top videos</h2>
+      <div class="container">
+        <div class="holder">
+          <div class="videos">
+            <div class="top-vids">
+              <p>top videos</p>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+            <div class="toggle-buttons">
+              <div>
+                <p>How To Create Sub Domain</p>
+                <span>05:18</span>
+              </div>
+              <div>
+                <p>Playing With The DNS</p>
+                <span>03:18</span>
+              </div>
+              <div>
+                <p>Everything About The Virtual Hosts</p>
+                <span>05:25</span>
+              </div>
+              <div>
+                <p>How To Monitor Your Website</p>
+                <span>04:16</span>
+              </div>
+              <div>
+                <p>Uncharted Beating The Last Boss</p>
+                <span>07:48</span>
+              </div>
+              <div>
+                <p>Ys Oath In Felghana Overview</p>
+                <span>03:12</span>
+              </div>
+              <div>
+                <p>Ys Series All Games Ending</p>
+                <span>08:10</span>
+              </div>
+            </div>
+          </div>
+          <div class="view">
+            <img src="images/video-preview.jpg" alt="">
+            <div class="current-vid">Everything About The Virtual Hosts</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end top videos -->
   </body>
 </html>
