UI: stats section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- normalize lib -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- font awesome lib -->
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- project css -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/framework.css" />
@@ -1083,5 +1083,42 @@
       </div>
     </section>
     <!-- end top videos -->
+
+    <!-- start stats -->
+    <section class="sect stats" id="stats">
+      <div class="bg">
+        <img src="images/stats.jpg" alt="">
+      </div>
+      <h2 class="heading-secondary">our awesome stats</h2>
+      <div class="container">
+        <div class="box">
+          <i class="fas fa-user"></i>
+          <div class="count" data-count="150">0</div>
+          <span>clients</span>
+        </div>
+        <div class="box">
+          <i class="fas fa-code"></i>
+          <div class="count" data-count="135">0</div>
+          <span>projects</span>
+        </div>
+        <div class="box">
+          <i class="fas fa-globe-africa"></i>
+          <div class="count" data-count="50">0</div>
+          <span>countries</span>
+        </div>
+        <div class="box">
+          <i class="far fa-money-bill-alt"></i>
+          <div class="count" data-count="500">0</div>
+          <span>money</span>
+        </div>
+      </div>
+    </section>
+    <!-- end stats -->
+
+    <!-- start request discount sect -->
+    <section class="sect request-a-discount" id="request-a-discount">
+      
+    </section>
+    <!-- end request discount sect -->
   </body>
 </html>
