--- a/index.html
+++ b/index.html
@@ -1145,5 +1145,56 @@
       </div>
     </section>
     <!-- end request discount sect -->
+
+    <footer>
+      <div class="container">
+        <div class="socials">
+          <h3>Elzero</h3>
+          <div class="media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur</p>
+        </div>
+
+        <div class="links">
+          <a href="#"><i class="fas fa-angle-double-right"></i><span>Important Link 1</span></a>
+          <a href="#"><i class="fas fa-angle-double-right"></i><span>Important Link 2</span></a>
+          <a href="#"><i class="fas fa-angle-double-right"></i><span>Important Link 3</span></a>
+          <a href="#"><i class="fas fa-angle-double-right"></i><span>Important Link 4</span></a>
+          <a href="#"><i class="fas fa-angle-double-right"></i><span>Important Link 5</span></a>
+        </div>
+
+        <div class="contact-info">
+          <div class="box">
+            <i class="fas fa-map-marker-alt"></i>
+            <div class="text">
+              <p>Egypt, Giza, Inside The Sphinx, Room Number 220</p>
+            </div>
+          </div>
+          <div class="box">
+            <i class="far fa-clock"></i>
+            <div class="text">
+              <p>Business Hours: From 10:00 To 18:00</p>
+            </div>
+          </div>
+          <div class="box">
+            <i class="fas fa-phone-volume"></i>
+            <div class="text">
+              <p>+20123456789</p>
+              <p>+20198765432</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="images">
+          <div class="cont">
+            <img src="images/gallery-01.png" alt=""><img src="images/gallery-02.png" alt=""><img src="images/gallery-03.jpg" alt=""><img src="images/gallery-04.png" alt=""><img src="images/gallery-05.jpg" alt=""><img src="images/gallery-06.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="credit">Made By <a href="https://mohamed-ayman01.github.io" target="_blank">Mohamed E. Ayman</a></div>
+    </footer>
   </body>
 </html>
